Rating guage added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,8 +7,20 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="rating">Loading...</h1>
-  <p>Average Driving Rating</p>
+  <div class="guage">
+    <div class="guage_body">
+      <div class ="guage_fill">
+      </div>
+      <div class="guage_cover">
+        <h1 id="rating">Loading...</h1>
+        
+      </div>
+    </div>
+  </div>
+  <p>Driver's Rating</p>
+  
+  
+  
 
   <script src="script.js"></script>
 </body>
