--- a/frontend/index.html
+++ b/frontend/index.html
@@ -18,7 +18,13 @@
     </div>
   </div>
   <p>Driver's Rating</p>
-  
+  <div class="feedback-container">
+    <div class="feedback-message">Loading feedback...</div>
+    <div class="feedback-message"></div>
+    <div class="feedback-message"></div>
+    <div class="feedback-message"></div>
+    <div class="feedback-message"></div>
+  </div>
   
   
 
