--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,6 +28,12 @@
   
   
 
-  <script src="script.js"></script>
+  
+  <script>   //automated update versions
+    const version = Date.now();
+    const script = document.createElement('script');
+    script.src = `script.js?v=${version}`;
+    document.body.appendChild(script);
+  </script>
 </body>
 </html>
